# geoagentbench

./: .gitignore  NOTICE  README.md  benchmark-design.md
authoring/: AUTHORING_HISTORY_TEMPLATE.md  author-context.md  coverage-vocabulary.yaml  evaluator-orchestrator-prompt.md  instruction-stripping-guide.md  inventory.md  orchestrator-judgment-prompt.md  overture-reference.md  task-design-prompt.md  task-evaluator-prompt.md  task-inventory-design.md
authoring/orchestrator/: inventory.py  notes.py  run.py
eval/: .gitignore  README.md  adapters.yaml  eval-app-design.md  pyproject.toml
eval/eval/: __init__.py  cli.py
eval/eval/core/: __init__.py  adapters.py  runner.py  scoring.py  storage.py  tasks.py  viz.py
eval/eval/ui/: app.py
eval/eval/ui/static/: app.css
eval/eval/ui/templates/: _run_table.html  base.html  run_detail.html  run_task_detail.html  runs_list.html  runs_new.html  task_detail.html  tasks_index.html
eval/geo_grading/: __init__.py  comparisons.py  scoring.py
eval/tests/: test_comparisons.py  test_runner_smoke.py  test_scoring.py
harness/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
harness/adapter_core/: __init__.py  app.py  auth.py  container.py  logging_config.py  prompts.py  schemas.py  sessions.py
harness/dispatcher/: __init__.py  __main__.py  app.py  dispatch.py
harness/openrouter/: __init__.py  config.py  run.py  tools.py
harness/sandbox/: Dockerfile
harness/tests/: test_container.py  test_contract.py  test_dispatch.py  test_openrouter_e2e.py  test_openrouter_run.py  test_openrouter_tools_container.py
tasks/crs-l1-london-laea-areas/: README.md  coverage.yaml  grade.py  metadata.yaml  task.json  visualize.py
tasks/crs-l1-nyc-webmercator-cycleways/: README.md  coverage.yaml  grade.py  metadata.yaml  task.json  visualize.py
tasks/crs-l1-paris-lambert93/: README.md  coverage.yaml  grade.py  metadata.yaml  task.json  visualize.py
tasks/crs-l2-fiji-antimeridian/: grade.py  (+5 more)
(+517 files in other folders)
