[project]
name = "geo-agent-bench"
version = "0.1.0"
description = "Geospatial agent benchmark — task suite, grading library, eval CLI/UI."
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0,<2.0",
    "shapely>=2.0,<3.0",
    "pyogrio>=0.10,<0.11",
    "pyproj>=3.6,<4.0",
    "duckdb>=1.1,<2.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "requests>=2.32,<3.0",
    "pyyaml>=6.0,<7.0",
    "pyarrow>=18.0,<25.0",
    "httpx>=0.27,<1.0",
    "starlette>=0.40,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.18",
    "osmnx>=2.0,<3.0",
    "networkx>=3.3,<4.0",
]

[project.scripts]
eval = "eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geo_grading", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
