[project]
name = "harness"
version = "0.3.0"
description = "Geospatial agent benchmark harness — HTTP contract adapters."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.9,<3.0",
    "python-json-logger>=2.0,<4.0",
    "openai>=1.50,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapter_core", "openrouter", "dispatcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end test that hits the real OpenRouter API (requires OPENROUTER_API_KEY).",
]
